<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.ChangeInfo">

    <TextView
        android:id="@+id/ttcn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_information"
        android:textSize="@dimen/title_textSize"
        android:textColor="@color/title_text_color"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/big_avatar_size"
        android:layout_height="@dimen/big_avatar_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/big_avatar_marginTop"
        android:layout_below="@id/ttcn"
        android:id="@+id/circleCN"
        android:background="?attr/selectableItemBackgroundBorderless"
        />
    <EditText
        android:id="@+id/edtsuaTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/text_size"
        android:layout_below="@id/circleCN"
        android:layout_marginTop="@dimen/editText_changeInfo_marginTop"
        android:layout_centerHorizontal="true"
        android:scrollHorizontally="true"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/edtSuastatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="@dimen/text_size"
        android:layout_below="@id/edtsuaTen"
        android:layout_marginTop="@dimen/editText_changeInfo_marginTop"
        android:layout_centerHorizontal="true"
        android:scrollHorizontally="true"
        android:maxLines="1"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/edtSuastatus"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/ql"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/next_button"
            android:layout_margin="@dimen/button_changeInfo_margin"
            />
        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:background="@drawable/next_button"
            android:layout_margin="@dimen/button_changeInfo_margin"
            />

    </LinearLayout>
</RelativeLayout>