<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.Information">
    <TextView
        android:layout_marginTop="@dimen/textView_marginTop"
        android:id="@+id/textchonhinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_avatar"
        android:textSize="@dimen/text_size"
        android:layout_centerHorizontal="true"
        android:textColor="@color/purple_200"/>
<de.hdodenhof.circleimageview.CircleImageView
    android:layout_marginVertical="@dimen/avatar_marginVertical"
    android:id="@+id/btn_hinhanh"
    android:layout_width="@dimen/big_avatar_size"
    android:layout_height="@dimen/big_avatar_size"
    android:layout_below="@id/textchonhinh"
    android:scaleType="centerCrop"
    android:src="@drawable/unknownavatar"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:layout_centerHorizontal="true"
    />
    <TextView
        android:id="@+id/textNhapten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and_input_your_name_below"
        android:textSize="@dimen/text_size"
        android:layout_below="@id/btn_hinhanh"
        android:layout_centerHorizontal="true"
        android:textColor="@color/purple_200"/>
    <EditText
        android:id="@+id/edtTen"
        android:layout_marginTop="@dimen/editText_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@id/textNhapten"
        android:layout_marginHorizontal="@dimen/editText_marginHorizontal"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="@dimen/button_textSize"
        android:id="@+id/buttonNext"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/button_marginTop"
        android:layout_below="@id/edtTen"
        android:layout_centerHorizontal="true"
        android:background="@drawable/next_button"/>
</RelativeLayout>