<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash.SplashActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        >
        <TextView
            android:id="@+id/textViewDangky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/title_textSize"
            />

        <EditText
            android:id="@+id/editTextTextEmailAddressDK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_marginTop"
            android:ems="10"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_below="@id/textViewDangky"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/editTextTextPasswordDK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_marginTop"
            android:ems="10"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_below="@id/editTextTextEmailAddressDK"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:id="@+id/editTextConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_marginTop"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textColor="@color/white"
            android:layout_below="@id/editTextTextPasswordDK"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/editTextConfirm"
            android:layout_marginTop="@dimen/view_marginTop"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/buttonQuaylai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:background="@drawable/oval_button"
                android:layout_marginHorizontal="@dimen/button_marginHorizontal"
                />
            <Button
                android:id="@+id/butDangky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@drawable/oval_button"
                android:layout_marginHorizontal="@dimen/button_marginHorizontal"
                />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>